fix: test to unit test